--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,73 @@
-google-genai
-streamlit
-requests
-docx
-PyPDF2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
+fpdf==1.7.2
+gitdb==4.0.12
+GitPython==3.1.44
+google==3.0.0
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-dialogflow==2.41.1
+google-genai==1.7.0
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.9.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+lxml==5.3.1
+MarkupSafe==3.0.2
+narwhals==1.32.0
+numpy==2.2.4
+openai==1.68.2
+packaging==24.2
+pandas==2.2.3
+pdf2image==1.17.0
+pillow==11.1.0
+proto-plus==1.26.1
+protobuf==5.29.4
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+PyPDF2==3.0.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+pytz==2025.1
+referencing==0.36.2
+replicate==1.0.4
+reportlab==4.3.1
+requests==2.32.3
+rpds-py==0.23.1
+rsa==4.9
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+streamlit==1.43.2
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.3.0
+watchdog==6.0.0
+websockets==15.0.1
